Replaced Tux with another one.
Tried to do something with translating, also deleted some useless files. Moved canyon_water in textures folder because city requires it. (will add it in materials.dat later).

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-# SuperTuxKart 0.6.3
+SuperTuxKart 0.6.3
 ==============
 SuperTuxKart 0.6.3 is a SuperTuxKart Fanmade Version of the 0.6.2a release. The project is 
 made by YoshiKartin'.
