--- a/data/po/gl.po
+++ b/data/po/gl.po
@@ -730,7 +730,7 @@ msgstr "Circuíto de Carreiras"
 
 #. I18N: as in "ready, set, go", shown at the beginning of the race
 #: src/gui/race_gui.cpp:816
-msgid "Ready!"
+msgid "Ready?"
 msgstr "Preparados!"
 
 #: src/gui/player_controls.cpp:72
@@ -760,7 +760,7 @@ msgstr "Selecciona o tipo de rede"
 
 #. I18N: as in "ready, set, go", shown at the beginning of the race
 #: src/gui/race_gui.cpp:826
-msgid "Set!"
+msgid "Set?!"
 msgstr "Listos!"
 
 #: src/gui/race_menu.cpp:55
