--- a/data/po/sl.po
+++ b/data/po/sl.po
@@ -662,7 +662,7 @@ msgid "Racer"
 msgstr "Dirkač"
 
 #: src/gui/race_gui.cpp:930
-msgid "Ready!"
+msgid "Ready?"
 msgstr "Pripravljeni!"
 
 #: src/gui/player_controls.cpp:66
@@ -690,7 +690,7 @@ msgid "Second grand prix"
 msgstr "Drugi grand prix"
 
 #: src/gui/race_gui.cpp:939
-msgid "Set!"
+msgid "Set?!"
 msgstr "Pozor!"
 
 #: src/gui/race_menu.cpp:57
