--- a/data/po/fr.po
+++ b/data/po/fr.po
@@ -513,10 +513,6 @@ msgstr ""
 "Nouveau grand prix\n"
 "'%s' déverrouillé"
 
-#: data/tracks/secretgarden.secretgarden.track:4
-msgid "Secret Garden"
-msgstr "Jardin Secret"
-
 #: src/challenges/challenge.cpp:140
 #, c-format
 msgid ""
@@ -736,7 +732,7 @@ msgstr "Piste de course"
 
 #. I18N: as in "ready, set, go", shown at the beginning of the race
 #: src/gui/race_gui.cpp:816
-msgid "Ready!"
+msgid "Ready?"
 msgstr "À vos marques..."
 
 #: src/gui/player_controls.cpp:72
@@ -766,8 +762,8 @@ msgstr "Choisis un mode de jeu en ligne"
 
 #. I18N: as in "ready, set, go", shown at the beginning of the race
 #: src/gui/race_gui.cpp:826
-msgid "Set!"
-msgstr "Prêts"
+msgid "Set?!"
+msgstr "Prêts ?!"
 
 #: src/gui/race_menu.cpp:55
 #: src/gui/race_results_gui.cpp:79
@@ -842,10 +838,6 @@ msgstr ""
 "La touche 'virage brusque' te permet de faire des virages\n"
 "rapides et d'avoir un meilleur contrôle dans les courbes prononcées"
 
-#: data/tracks/subseatrack/subseatrack.track:4
-msgid "Subsea"
-msgstr "Sous la mer"
-
 #: data/tracks/islandtrack/islandtrack.track:4
 msgid "The Island"
 msgstr "L'île"
@@ -867,7 +859,7 @@ msgstr ""
 "trop vieux, il a donc été supprimé."
 
 #: data/tracks/mines/mines.track:4
-msgid "The Old Mine"
+msgid "The old mine"
 msgstr "La vieille mine"
 
 #: src/gui/grand_prix_ending.cpp:84
@@ -1023,15 +1015,6 @@ msgstr ""
 "la lune' contre 3 opposants\n"
 "virtuels expérimentés."
 
-#: data/tracks/secretgarden/secretgarden.challenge:6
-msgid ""
-"Finish 3 laps on the Secret Garden\n"
-"Track with 4 AI karts\n"
-"under 1:45 minute."
-msgstr ""
-"Gagne en 1 minutes et 45 secondes\n"
-"3 tours sur la piste "Jardin Secret"."
-
 #: src/gui/config_display.cpp:75
 msgid "Window mode"
 msgstr "Mode fenêtré"
@@ -1158,8 +1141,6 @@ msgstr "non défini"
 #~ msgstr "Étincelle - lent, mais rebondit sur les murs"
 #~ msgid "Result"
 #~ msgstr "Résultat"
-#~ msgid "Secret Garden"
-#~ msgstr "Jardin Secret"
 #~ msgid "No track selected"
 #~ msgstr "Aucune piste n'est sélectionnée"
 #~ msgid "Check the current key bindings for the first player"
