--- a/data/po/supertuxkart.pot
+++ b/data/po/supertuxkart.pot
@@ -652,7 +652,7 @@ msgstr ""
 
 #. I18N: as in "ready, set, go", shown at the beginning of the race
 #: src/gui/race_gui.cpp:816
-msgid "Ready!"
+msgid "Ready?"
 msgstr ""
 
 #: src/gui/player_controls.cpp:72
@@ -682,7 +682,7 @@ msgstr ""
 
 #. I18N: as in "ready, set, go", shown at the beginning of the race
 #: src/gui/race_gui.cpp:826
-msgid "Set!"
+msgid "Set?!"
 msgstr ""
 
 #: src/gui/race_menu.cpp:55 src/gui/race_results_gui.cpp:79
