--- a/data/po/supertuxkart.pot
+++ b/data/po/supertuxkart.pot
@@ -8,9 +8,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-01-19 03:13+0100\n"
+"POT-Creation-Date: 2023-12-09 00:05+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Last-Translator: Yann Lenormand <>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
@@ -147,11 +147,11 @@ msgid "Clear from Blacklist"
 msgstr ""
 
 #: data/tracks/crescentcrossing/crescentcrossing.challenge:5
-msgid "Collect Nitro in Math Class"
+msgid "Collect Nitro in Math Class."
 msgstr ""
 
 #: data/grandprix/tothemoonandback.challenge:5
-msgid "Collect the Pharaohs Treasure"
+msgid "Collect the Pharaohs Treasure."
 msgstr ""
 
 #: src/gui/help_page_one.cpp:123
@@ -322,7 +322,7 @@ msgid "Follow the Leader"
 msgstr ""
 
 #: data/tracks/city/city.challenge:5
-msgid "Follow the Leader in the Jungle"
+msgid "Follow the Leader in the Jungle."
 msgstr ""
 
 #: data/grandprix/atworldsend.challenge:5
@@ -630,10 +630,6 @@ msgstr ""
 msgid "Quit"
 msgstr ""
 
-#: src/gui/race_gui.cpp:637
-msgid "REV"
-msgstr ""
-
 #: src/gui/race_results_gui.cpp:74
 msgid "Race in this track again"
 msgstr ""
@@ -672,8 +668,16 @@ msgstr ""
 msgid "Right"
 msgstr ""
 
+#: data/tracks/scotland/scotland.track:4
+msgid "Scotland"
+msgstr ""
+
 #: data/grandprix/tothemoonandback.grandprix:5
 msgid "Second grand prix"
+msgstr ""
+
+#: data/tracks/secretgarden/secretgarden.track:4
+msgid "Secret Garden"
 msgstr ""
 
 #: src/gui/network_gui.cpp:52
@@ -772,7 +776,7 @@ msgid ""
 msgstr ""
 
 #: data/tracks/mines/mines.track:4
-msgid "The old mine"
+msgid "The Old Mine"
 msgstr ""
 
 #: src/gui/grand_prix_ending.cpp:84
@@ -843,7 +847,7 @@ msgstr ""
 #: data/followtheleader.challenge:5
 msgid ""
 "Win Penguin Playground Grand\n"
-"Prix"
+"Prix."
 msgstr ""
 
 #: data/followtheleader.challenge:6
@@ -855,7 +859,7 @@ msgstr ""
 #: data/grandprix/snagdrive.challenge:5
 msgid ""
 "Win To the Moon and Back\n"
-"Grand Prix"
+"Grand Prix."
 msgstr ""
 
 #: data/tracks/fortmagma/fortmagma.challenge:6
@@ -882,13 +886,13 @@ msgstr ""
 #: data/tracks/fortmagma/fortmagma.challenge:5
 msgid ""
 "Win a Head to Head on\n"
-"Tux Tollway"
+"Tux Tollway."
 msgstr ""
 
 #: data/grandprix/alltracks.challenge:5
 msgid ""
 "Win the At World's End\n"
-"Grand Prix"
+"Grand Prix."
 msgstr ""
 
 #: data/grandprix/snagdrive.challenge:6
