--- a/INSTALL
+++ b/INSTALL
@@ -1,85 +1,63 @@
-SUPERTUXKART INSTALLATION INSTRUCTIONS
-======================================
+SUPERTUXKART INSTALLATION INSTRUCTIONS :
+========================================
 
-General
--------
+Windows Installation Process :
+------------------------------
 
-First, make sure that you have the following packages installed:
+First, make sure that you have the following packages installed/compiled :
 
-  * OpenGL (GLUT or freeGLUT/Mesa 3.0 or later)
-  * PLIB version 1.8.4 or later
-  * SDL 1.2 or later but you will need to do a conversion since after SDL 1.2 SDL2 was released.
-  * OpenAL
+  * Visual Studio 2008 C++ (only to execute the IDE package).
+  * OpenGL (GLUT or freeGLUT/Mesa 3.0 or later).
+  * PLIB v1.8.5.
+  * SDL 1.2 or later (not SDL2 and after).
+  * OpenAL (SDK).
+  * ENet (don't get a version using an old protocol).
+  * Libintl3.
+  * LibVorbis.
+  * LibOgg.
 
-Unpack the files from the tarball like this:
+ALL OF THE PACKAGES ABOVE MUST BE IN COMPILED IN RELEASE AND WIN32 CONFIG!!
 
-  tar xzf supertuxkart-*.tar.gz
-  cd supertuxkart-*
+Secondly, make a folder for the includes and another one for the libraries.
 
+Copy your includes in folders and this is what you should get in you include folder :
 
-where '*' is the version of SuperTuxkart you downloaded - eg 0.2.0. Then:
+ * C:/yourpath/yourincludefolder/AL/yourOpenALincludes,
+ * C:/yourpath/yourincludefolder/enet/yourENetincludes,
+ * C:/yourpath/yourincludefolder/GL/yourOpenGLincludes,
+ * C:/yourpath/yourincludefolder/ogg/yourLibOggincludes,
+ * C:/yourpath/yourincludefolder/plib/yourPLIBincludes,
+ * C:/yourpath/yourincludefolder/SDL/yourSDL1.2includes,
+ * C:/yourpath/yourincludefolder/vorbis/yourLibVorbisincludes.
 
-  ./configure
-  make
+and libintl.h (this file should be in your include folder).
 
-To test the compilation, supertuxkart can be run from the build
-directory by ./src/supertuxkart  (./src/supertuxkart.exe on windows).
+Copy your libraries in your libraries folder and you should get something like this :
 
-To install the file, as root execute:
+C:/yourpath/yourlibrariesfolder/allofyourlibraries.
 
-  make install
+To get the libraries files (.lib), you will need to compile all of the packages.
 
-The default install location is /usr/local, i.e. the data files will
-be written to /usr/local/share/games/supertuxkart, the executable
-will be copied to /usr/local/bin. To change the default installation
-location, use the "--prefix" option of configure, e.g. --prefix=/usr
-See the --help output of configure for further options.
+Don't forget to get the binary files of your packages (.dll) to the stk folder.
 
+Now, you will need to create 2 environment variables :
 
-SVN STK on Ubuntu Edgy
-----------------------
-Here are the compilation instructions for the current svn(05 oct. 2006) of
-Super Tux Kart on Ubuntu Edgy, contributed by Damien:
+ * STK_INCLUDE
+ * STK_LIB
 
-install following packages:
-# apt-get install libopenal-dev libmikmod2-dev plib1.8.4-dev
-libglu1-mesa-dev subversion autoconf automake1.9 g++ gcc
+The STK_INCLUDE variable must lead to your include folder.
+The STK_LIB variable must lead to your libraries folder.
 
-do a:
-$ svn checkout http://supertuxkart.svn.sourceforge.net/svnroot/supertuxkart/trunk/supertuxkart
+When you've done this, go to : stkfolder/src/ide/vc9 and open supertuxkart.vcproj
 
-then:
-$ cd trunk
-$ ./autogen.sh && ./configure && make
-and if all went well:
-$ src/supertuxkart
+To compile just change the BulletDebug to BulletRelease and the game will be compiled.
 
-tested with g++ 3.3 and 4.1 , both succeeded.
+Go to the stk folder and enjoy the game!
 
-If you want to install the game system-wide, do 'make install'.
+Linux Installation Process :
+----------------------------
 
-
-But it didn't work!
--------------------
-
-If you checked out your copy directly from SVN, you have to run
-'sh autogen.sh' to generate the configure script.
-
-You should check the SuperTuxKart wiki at:
-
-http://supertuxkart.sourceforge.net/
-
-
-Also, the most common (by FAR) reason for problems is that your OpenGL/Mesa
-is incorrectly installed - so before you complain to any of the PLIB or
-Supertuxkart mailing lists, first try running one of the example programs
-that comes with your OpenGL implementation - or one of the Mesa or GLUT
-sample programs.
-
-If you those examples run OK - then go to the PLIB home page and download
-the PLIB examples.
-
-If THOSE run correctly - but Supertuxkart doesn't then please get in touch 
-with the SupertuxKart mailing list and we'll do our best to get you up and 
-racing.
+I don't know how to compile the game on Linux :/
+I would recommend to get help on the Unofficial Discord server of SuperTuxKart :
+https://discord.gg/u2AJDpF
 
